# texas-holdem-ml-bot

./: .gitattributes  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMPLIANCE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  test_perf.py
.github/workflows/: ci.yml
configs/: .gitkeep
data/interim/: .gitkeep
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: .gitkeep  phase1_chunk1_performance_optimization.json  phase1_chunk2_coverage.json  phase1_chunk3_contract_tests.json
notebooks/: .gitkeep
src/texas_holdem_ml_bot/: __init__.py
src/texas_holdem_ml_bot/engine/: cards.py  evaluator.py  game_state.py  rules.py
tests/: .gitkeep  test_smoke.py
tests/engine/: test_cards.py  test_evaluator.py  test_game_state.py  test_rules.py
tools/: .gitkeep
