[project]
name = "texas-holdem-ml-bot"
version = "0.0.1"
description = "Modular, reproducible Texas Hold’em poker bot built with ML."
authors = [{ name = "Thomas C", email = "tczerwien03@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.12"

# Runtime dependencies (PEP 621: array of PEP 508 strings)
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "jupyter",
  "pydantic",
  "hydra-core",
  "joblib"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "isort"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["texas_holdem_ml_bot*"]

# --- Tooling config (keeps hooks and IDEs consistent) ---

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["texas_holdem_ml_bot"]
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
# Enable/disable rules here if needed, but defaults are fine with pre-commit hook.

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
plugins = []
mypy_path = "src"
